fixed defaults, updated pie chart, katie

--- a/src/app/journal-published/journal-published.component.html
+++ b/src/app/journal-published/journal-published.component.html
@@ -30,7 +30,7 @@
             <div id="content">
                 <div class="col-sm-10 offset-sm-1">
                     <ul class="list-group">
-                        <li class="list-group-item d-flex justify-content-between heading">
+                        <li class="list-group-item d-flex justify-content-between heading" id="journalHeading">
                             <p class="p-0 m-0 flex-grow-1 reg-font" style="color: black; font-weight: 600;">Date:</p>
                             <p class="p-0 m-0 flex-grow-1 reg-font" style="color: black; font-weight: 600;">Title:</p>
                         </li>
@@ -51,7 +51,7 @@
 
             <div class="modal-sandbox"></div>
             <div class="modal-box">
-                <div class="modal-header">
+                <div class="modal-header" id="journalModal">
                     <h1 class="type-font">{{currentEntry.title}}</h1>
                 <div class="close-modal justify-content-end" style="margin-top: 1em; color: black" data-dismiss="modal" aria-label="Close">&#10006;</div> 
                 
