calendar issue fixed and checkbox validation and icon display

--- a/src/app/coffee-chat-profiles/coffee-chat-profiles.component.html
+++ b/src/app/coffee-chat-profiles/coffee-chat-profiles.component.html
@@ -31,7 +31,7 @@
                 </div>
             </div>
 
-            <img src="assets\images\brooke-cagle-Nm70URdtf3c-unsplash.jpg"/>
+            <img src={{participant.icon}}/>
 
         </header>
             <div class="info">
