--- a/src/app/coffee-chat-pending-meetings/coffee-chat-pending-meetings.component.html
+++ b/src/app/coffee-chat-pending-meetings/coffee-chat-pending-meetings.component.html
@@ -101,23 +101,7 @@
                 </div>
             </div>
 
-            <!--Accept and Add to Calendar Modal-->
-            <div class="modal" id="accept-calendar">
-                <div class="modal-sandbox"></div>
-                <div class="modal-box">
-                    <div class="modal-header">
-                        <h1 class="reg-font">Add to Calendar</h1>                    
-                    </div>
-                    <div class="modal-body">
-                        <p>Would you like to add this meeting to your Google Calendar? </p>
-                    <br />
-                    <a class="modal-button" data-dismiss="modal" (click)="updateTimeVariables(currentMeeting); getParticipantEmails(currentMeeting); acceptMeeting(currentMeeting)"
-                    href="http://www.google.com/calendar/event?action=TEMPLATE&text={{currentMeeting.title}}&dates={{currentMeeting.year}}{{currentMeeting.month}}{{currentMeeting.day}}T{{sTime}}00/{{currentMeeting.year}}{{currentMeeting.month}}{{currentMeeting.day}}T{{eTime}}00&trp=false&sprop=&sprop=name:" target="_blank" rel="nofollow">Yes, Add to my Google Calendar</a>
-                    <button type="button" class="modal-button" data-dismiss="modal"  (click)="acceptMeeting(currentMeeting)" aria-label="Close">No, Don't Add to my Google Calendar</button> 
-                    </div>
-                </div>
-                </div>
-
+           
             <!--Delete Meeting Modal-->
             <div class="modal" id="delete">
                 <div class="modal-sandbox"></div>
@@ -142,5 +126,24 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
     <!-- Bootstrap JS -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+
+         <!--Accept and Add to Calendar Modal-->
+         <div class="modal" id="accept-calendar">
+            <div class="modal-sandbox"></div>
+            <div class="modal-box">
+                <div class="modal-header">
+                    <h1 class="reg-font">Add to Calendar</h1>                    
+                </div>
+                <div class="modal-body">
+                    <p>Would you like to add this meeting to your Google Calendar? </p>
+                <br />
+                <a class="modal-button" aria-label="Close" (click)="updateTimeVariables(currentMeeting); getParticipantEmails(currentMeeting); acceptMeeting(currentMeeting)"
+                href="http://www.google.com/calendar/event?action=TEMPLATE&text={{currentMeeting.title}}&dates={{currentMeeting.year}}{{currentMeeting.month}}{{currentMeeting.day}}T{{sTime}}00/{{currentMeeting.year}}{{currentMeeting.month}}{{currentMeeting.day}}T{{eTime}}00&trp=false&sprop=&sprop=name:" target="_blank" rel="nofollow" id="createMeeting">Yes, Add to Google Calendar</a>
+                
+                <button type="button" class="modal-button" data-dismiss="modal"  (click)="acceptMeeting(currentMeeting)" aria-label="Close">No, Don't Add to my Google Calendar</button> 
+                </div>
+            </div>
+            </div>
+
 </body>
 </html>
