--- a/src/app/coffee-chat-random-friends/coffee-chat-random-friends.component.html
+++ b/src/app/coffee-chat-random-friends/coffee-chat-random-friends.component.html
@@ -78,7 +78,7 @@
                     </div>
                 </div>
                 <div class="form-wrapper justify-content-center">
-                    <button [disabled]="loading" class="button">
+                    <button [disabled]="loading" class="button" id="createMeeting">
                         <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
                         Create Meeting
                     </button>
