--- a/src/app/journal-mood-do-reroute/journal-mood-do-reroute.component.html
+++ b/src/app/journal-mood-do-reroute/journal-mood-do-reroute.component.html
@@ -1,4 +1,4 @@
-<html>
+<html id="journal">
 
 <head>
     <meta charset="utf-8">
@@ -46,7 +46,7 @@
                     <div class="col-2"></div>                    
                 </div>
                 <div class="row justify-content-center">
-                        <button [disabled]="loading" class="buttons">
+                        <button [disabled]="loading" class="buttons" id="jModalButton">
                             <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
                             Submit
                         </button>
