--- a/src/app/journal-prompt-edit/journal-prompt-edit.component.html
+++ b/src/app/journal-prompt-edit/journal-prompt-edit.component.html
@@ -42,7 +42,7 @@
                     <div class="col-1"></div>
                 </div>
                 <div class="row justify-content-center">
-                    <button [disabled]="loading" class="buttons">
+                    <button [disabled]="loading" class="buttons" id="jModalButton">
                         <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
                         Submit
                     </button>
