UTC time zone disclaimer

--- a/src/app/coffee-chat-pending-meetings/coffee-chat-pending-meetings.component.html
+++ b/src/app/coffee-chat-pending-meetings/coffee-chat-pending-meetings.component.html
@@ -37,7 +37,7 @@
                         <div class="card" id="pendingMeetings">
                         <div class="card-title justify-content-end reg-font m-3">
                             <a style="font-size: 18px; font-weight: 600;">{{meeting.month}}/{{meeting.day}}/{{meeting.year}}</a>
-                            <a style="font-size: 18px;">{{meeting.startTime}} — {{meeting.endTime}}</a>
+                            <a style="font-size: 18px;">{{meeting.startTime}} — {{meeting.endTime}} (local time)</a>
                             <button class="btn-2 collapsed justify-content-end" data-toggle="collapse" (click)="getMeeting(meeting)" data-target="#collapse1" aria-expanded="false" aria-controls="collapse">
                                 <a style="font-size: 15px;">{{meeting.participants.length}} Attendee(s)</a><span class="fa fa-chevron-down fa-sm"></span>
                             </button>
@@ -75,7 +75,7 @@
                         <div class="card" id="pendingMeetings">
                         <div class="card-title justify-content-end reg-font m-3">
                             <a style=" font-size: 18px; font-weight: 600;">{{meeting.month}}/{{meeting.day}}/{{meeting.year}}</a>
-                            <a style=" font-size: 18px;">{{meeting.startTime}} — {{meeting.endTime}}</a>
+                            <a style=" font-size: 18px;">{{meeting.startTime}} — {{meeting.endTime}} (local time)</a>
                         </div>
                         <div class="card-body mt-0">
                             <a style="font-size: 18px;">{{meeting.title}}</a>
