--- a/src/app/coffee-chat-random-friends/coffee-chat-random-friends.component.html
+++ b/src/app/coffee-chat-random-friends/coffee-chat-random-friends.component.html
@@ -62,7 +62,7 @@
                             </div>
                 </div>
                 <div class="form-group">
-                    <label for="default-picker" style="color: black; font-weight: 600;">Start Time:</label>
+                    <label for="default-picker" style="color: black; font-weight: 600;">Start Time: <a style="font-size: 14px; color: rgb(231, 160, 160);">**Meetings created in UTC time**</a></label>
 
                     <input type="time" id="default-picker" placeholder="Select time" formControlName="startTime" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.startTime.errors }">
                     <div *ngIf="submitted && f.startTime.errors" class="invalid-feedback">
