--- a/src/app/coffee-chat-upcoming-meetings/coffee-chat-upcoming-meetings.component.html
+++ b/src/app/coffee-chat-upcoming-meetings/coffee-chat-upcoming-meetings.component.html
@@ -33,7 +33,7 @@
                     <ul class="list-group">
                         <li class="list-group-item d-flex justify-content-start heading" id="ccUpcoming">
                             <p class="p-0 m-0 flex-grow-1" style="color: black; font-weight: 600;">Date:</p>
-                            <p class="p-0 m-0 flex-grow-1" style="color: black; font-weight: 600;">Time:</p>
+                            <p class="p-0 m-0 flex-grow-1" style="color: black; font-weight: 600;">Local Time:</p>
                         </li>
                         <li class="list-group-item d-flex justify-content-between" *ngFor="let meeting of hostingMeetings"  [ngValue]="meeting">
                             <p class="p-0 m-0 flex-grow-1" style="color: black">{{meeting.month}}/{{meeting.day}}/{{meeting.year}}</p>
@@ -50,7 +50,7 @@
                     <ul class="list-group">
                         <li class="list-group-item d-flex justify-content-start heading"  id="ccUpcoming">
                             <p class="p-0 m-0 flex-grow-1" style="color: black; font-weight: 600;">Date:</p>
-                            <p class="p-0 m-0 flex-grow-1" style="color: black; font-weight: 600;">Time:</p>
+                            <p class="p-0 m-0 flex-grow-1" style="color: black; font-weight: 600;">Local Time:</p>
 
 
                         </li>
