--- a/src/app/coffee-chat-pending-meetings/coffee-chat-pending-meetings.component.css
+++ b/src/app/coffee-chat-pending-meetings/coffee-chat-pending-meetings.component.css
@@ -196,9 +196,9 @@ Modal CSS
 }
 
 .modal-button{
-    border: 2px solid #e4955e;
-    background-color: ivory;
-    color: #e4955e;
+    border: 2px solid #e4955e !important;
+    background-color: ivory !important;
+    color: #e4955e !important;
     padding: 10px 24px;
     font-size: 16px;
     cursor: pointer;
@@ -207,7 +207,8 @@ Modal CSS
 }
 
 .modal-button:hover{
-    background-color:#e4955e;
-    color: white; 
+    background-color:#e4955e !important;
+    color: white !important;
+    text-decoration: none !important; 
 }
 
