--- a/src/app/coffee-chat-pending-meetings/coffee-chat-pending-meetings.component.html
+++ b/src/app/coffee-chat-pending-meetings/coffee-chat-pending-meetings.component.html
@@ -113,7 +113,7 @@
                     <br />
                     <a class="modal-button" data-dismiss="modal" (click)="updateTimeVariables(currentMeeting); getParticipantEmails(currentMeeting); acceptMeeting(currentMeeting)"
                     href="http://www.google.com/calendar/event?action=TEMPLATE&text={{currentMeeting.title}}&dates={{currentMeeting.year}}{{currentMeeting.month}}{{currentMeeting.day}}T{{sTime}}00/{{currentMeeting.year}}{{currentMeeting.month}}{{currentMeeting.day}}T{{eTime}}00&trp=false&sprop=&sprop=name:" target="_blank" rel="nofollow">Yes, Add to my Google Calendar</a>
-                    <button type="button" class="modal-button" data-dismiss="modal"  (click)="acceptMeeting(currentMeeting)" aria-label="Close">No, Don't Add to my Google Calendar</button> 
+                    <button type="button" class="modal-button" data-dismiss="modal" id="createMeeting" (click)="acceptMeeting(currentMeeting)" aria-label="Close">No, Don't Add to my Google Calendar</button> 
                     </div>
                 </div>
                 </div>
@@ -128,8 +128,8 @@
                     <div class="modal-body">
                         <p>Are you sure you want to delete this meeting?</p>
                     <br />
-                    <button type="button" class="modal-button" (click)="deleteMeeting(currentMeeting)" data-dismiss="modal" aria-label="Delete">Delete</button>
-                    <button type="button" class="modal-button" data-dismiss="modal" aria-label="Close">Cancel</button>                     
+                    <button type="button" class="modal-button" (click)="deleteMeeting(currentMeeting)" data-dismiss="modal" aria-label="Delete" id="createMeeting">Delete</button>
+                    <button type="button" class="modal-button" data-dismiss="modal" aria-label="Close" id="createMeeting">Cancel</button>                     
                     </div>
                 </div>
             </div>
