--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -21,7 +21,7 @@
         <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
             <img src="assets/images/logo.jpg" alt="" width="100" height="80"><br><br>
            <div class="reg-font">Meaningful Minutes</div>
-           <p><alert></alert></p>
+           <alert></alert>
             <hr>
             <div class="form-group">
                 <input type="text" placeholder="username" formControlName="username" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.username.errors }" />
