Fixed range on bar chart

--- a/src/app/bar-graph/bar-graph.component.html
+++ b/src/app/bar-graph/bar-graph.component.html
@@ -11,6 +11,7 @@
         [options]="chartOptions"
         [legend]="false"
         [colors]="barGraphColor"
-        (chartClick)="onChartClick($event)">
+        (chartClick)="onChartClick($event)"
+        >
     </canvas>
   </div>
